plugins {
	id 'org.springframework.boot' version '2.6.3'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'com.tul'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation "org.springframework.boot:spring-boot-starter-data-jpa"
	implementation "javax.cache:cache-api"
	implementation "org.hibernate:hibernate-core"
	implementation "com.zaxxer:HikariCP"
	implementation "commons-codec:commons-codec"
	implementation "org.apache.commons:commons-lang3"
	implementation "commons-io:commons-io:2.6"
	implementation "javax.transaction:javax.transaction-api"
	implementation "org.ehcache:ehcache"
	implementation "org.hibernate:hibernate-jcache"
	implementation "org.hibernate:hibernate-entitymanager"
	implementation "org.hibernate:hibernate-envers"
	implementation "org.hibernate.validator:hibernate-validator"
    implementation 'junit:junit:4.13.1'
	runtimeOnly 'com.h2database:h2'
	compileOnly 'org.projectlombok:lombok:1.18.22'
	annotationProcessor 'org.projectlombok:lombok:1.18.22'

	testCompileOnly 'org.projectlombok:lombok:1.18.22'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.withType(Test) {
	useJUnitPlatform()
	jvmArgs '--enable-preview'
}
